--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
-body {
+body, html {
   font-family: Arial, sans-serif;
   background-color: #007dc7;
   color: white;
+  height: 100%;
+  overflow: hidden;
 }
 
 .image-button {
@@ -89,9 +91,10 @@ body {
 
 h1 {
   margin: 10px;
+  font-size: 30px;
 }
 
-div.menu {
+.menu {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -100,13 +103,13 @@ div.menu {
   text-align: center;
 }
 
-div.menu p {
+.menu p {
   display: inline;
   margin-right: 50px; /* adjust as needed */
   font-size: 30px;
 }
 
-div.menu p a {
+.menu p a {
   color: white; /* adjust as needed */
   text-decoration: none;
 }
@@ -116,4 +119,19 @@ div.menu p a {
   bottom: 50px;
   left: 0px;
   width: 100%;
+}
+
+
+.success {
+  position: fixed;
+  display: none;
+  top: 250px;
+  left: calc(50% - 75px);
+  z-index: 1000;
+}
+
+.content {
+  height: calc(100% - 60px);
+  padding: 5px;
+  overflow:auto
 }
